<resources>
    <string name="app_name">tilde_alfa</string>
    <string name="resp" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lecciones_btn">Lecciones</string>
    <string name="practicar_btn">Practicar</string>
    <string name="minijuego_btn">minijuego</string>
    <string name="dummy_text">Dummy\n\nText</string>
    <string name="titulo_dummy">titulo</string>
    <string name="practica_title_tv">Practica</string>
    <string name="modo_contratiempo_btn">Modo Contratiempo</string>
    <string name="modo_cl_sico_btn">Empezar Ejercicios</string>

    <string name="button_regla_general">Regla general</string>
    <string name="button_diptongo_hiato">Diptongo y hiato</string>
    <string name="button_casos_especiales">Casos especiales</string>

    <string name="button_submit">Enviar</string>
    <string name="button_finish">Finalizar</string>

    <string name="general_categorias_pregunta">Selecciona la categoría a la que pertenece cada palabra</string>
    <string name="general_categorias_palabra_1">Árbol</string>
    <string name="general_categorias_palabra_2">Computadora</string>
    <string name="general_categorias_palabra_3">Ilogico</string>
    <string name="general_categorias_palabra_4">Acción</string>
    <string-array name="general_categorias_respuestas">
        <item>Aguda</item>
        <item>Grave</item>
        <item>Esdrújula</item>
        <item>Sobreesdrújula</item>
    </string-array>

    <string name="diptongo">Diptongos</string>
    <string name="hiato">Hiatos</string>
    <string name="empezar">Empezar</string>
    <string name="timer">60</string>
    <string name="cero">0</string>
    <string name="puntos">Puntos:</string>


    <string name="general_definiciones_1_prompt">Son palabras que llevan tilde</string>
    <string name="general_definiciones_1_pregunta">Son palabras que llevan tilde cuando no terminan en N, S o vocal:</string>
    <string name="general_definiciones_1_agudas">Agudas</string>
    <string name="general_definiciones_1_graves">Graves</string>
    <string name="general_definiciones_1_esdrújulas_sobreesdrujulas">Esdrújulas y sobreesdrújulas</string>

    <string name="general_definiciones_2_prompt_1">Las palabras</string>
    <string name="general_definiciones_2_prompt_2">llevan tilde:</string>
    <string name="general_definiciones_2_pregunta">Las palabras agudas llevan tilde</string>
    <string name="general_definiciones_2_respuesta_1">Siempre</string>
    <string name="general_definiciones_2_respuesta_2">Cuando terminan en N, S o vocal</string>
    <string name="general_definiciones_2_respuesta_3">Cuando no terminan en N, S o vocal</string>

    <string name="diptongo_hiato_prompt">Elige las opciones correctas:</string>
    <string name="diptongo_hiato_tiene_un">Tiene un:</string>
    <string name="diptongo_hiato_formado_por">Formado por:</string>
    <string name="diptongo_hiato_lleva_tilde_en">Lleva tilde en:</string>
    <string name="diptongo_hiato_diptongo">Diptongo</string>
    <string name="diptongo_hiato_hiato">Hiato</string>
    <string-array name="diptongo_hiato_formado_por_respuestas">
        <item>Dos vocales fuertes</item>
        <item>Vocal fuerte y vocal débil</item>
        <item>Vocal débil y vocal fuerte</item>
        <item>Dos vocales débiles</item>
    </string-array>

    <string name="especiales_prompt">Selecciona la palabra con o sin tilde según lo indique el contexto:</string>

    <string name="integrador_prompt">Elige las opciones correctas:</string>
    <string name="integrador_tilde">¿Lleva tilde?</string>
    <string name="integrador_silaba">¿En qué sílaba la lleva?</string>
    <string name="integrador_si">Sí</string>
    <string name="integrador_no">No</string>
    <string-array name="integrador_silaba_respuestas">
        <item>Última</item>
        <item>Penúltima</item>
        <item>Antepenúltima</item>
    </string-array>

    <string name="score_prompt">Tu puntaje fue de:</string>

    <string name="title_activity_lessons">LessonsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hiatoTitulo">Diptongo y Hiato</string>
    <string name="hiatoDesc">
- Vocales fuertes (F) AEO aeo\n\n- Vocales débiles (D) UI\n\n
Diptongo:  vocales juntas, que se pronuncian en la misma sílaba.\n\n
    - Los diptongos pueden formarse con FD DF DD\n\n
    - FF nunca hace diptongo\n\n
    - Las vocales D con tilde se comportan como F\n\n\n
Hiato.  Vocales subsecuentes que se pronuncian en sílabas distintas.</string>
    <string name="casosEspeciales_titulo">Contexto- casos especiales</string>
    <string name="casosEspeciales_desc">
Hay palabras cuya acentuación depende del contexto en el que se utilicen, ya que admiten varias formas que son correctas.  Es el caso de algunas conjugaciones verbales, los acentos diacríticos, los interrogativos, etc.
\n\nEs necesario mencionar también algunas actualizaciones y casos especiales:\n\n
    - <b>Pronombres demostrativos:</b> este, ese, aquel; no se escriben con tilde.\n\n
    - <b>Monosílabos:</b> No se acentúan, salvo en los casos de diacríticos (mas-más, el-él, etc.)\n\n
    - <b>Interrogativos y exclamativos:</b> adónde, cómo, cuál, cuán, cuándo, cuánto, dónde, qué y quién; pueden tener función de relativos y entonces no se acentúan.\n\n
    - <b>Mayúsculas:</b> llevan tilde según la regla.\n\n
    - <b>Adverbio “solo”:</b> se escribe sin tilde.\n\n
    - <b>Palabras compuestas:</b> la regla se aplica como si fuera una palabra simple.\n\n
    - <b>Palabras compuestas con guion (-):</b> se toman en cuenta como dos palabras.\n\n
    - <b>Adverbios terminados en –mente:</b> conservan la acentuación del adjetivo del cual provienen.\n\n
    - <b>Aún:</b> lleva tilde si puede sustituirse por todavía.</string>

    <string name="reglageneral_titulo">
        Regla General
    </string>
    <string name="reglageneral_desc"> La regla general es la forma común de acentuar palabras y esta se forma tomando en cuenta las sílaba tónica de la palabra.\n\nTe puedes basar por el tipo de palabra que son por ejemplo:\n\n - Sobreesdrújulas: Llevan tilde siempre\n\n - Esdrújulas. Llevan siempre tilde\n\n - Graves: Llevan tilde cuando no terminan en N,S o vocal\n\n - Agudas: Llevan tilde cuando terminan en N, S o vocal\n
    </string>

    <string name="default_text">Cargando...</string>
    <string name="con_o_sin_tilde_title">¿Con o sin Tilde?</string>
    <string name="creditos">Aplicación desarrollada por:\n\n
    -Luis Fernando Lomelín Ibarra\n
    -David Alejandro Martínez Tristán\n
    -Ulrik Alberto Nuño Tapia\n
    -Diego Garza Macías\n\n
En conjunto con las maestras del Centro de Escritura:\n\n
    -María Robertha Leal\n
    -Yazmín Carrizales\n
    -Martha Pérez\n
    </string>
    <string name="help_main_menu">
        ¡Hola! Esta es la aplicación de ¿Con o sin Tilde?\n\n
Esta aplicación esta diseñada para que aprendas y practiques las reglas de acentuación en el español. Para entender las reglas presiona el botón de Lecciones para revisar y repasar las reglas de acentuación.\n\
Para poner en practica estos conocimientos, desliza el botón de lecciones para la izquierda para encontrar el botón de práctica. En esta sección podrás poner en práctica las lecciones aprendidas de las reglas de acentuación.\n\n

    </string>
    <string name="explicacionEjercios">
        En este espacio puedes poner a prueba tu conocimiento de las reglas de la acentuación. Se van a generar 10 ejercicios aleatorios que pondrán en practica los conceptos de las reglas de acentuación vistas en esta aplicación. Cada ejercicio tiene un valor de 1 punto. Por cada intento equivocado que  tengas se te va a bajar 0.25 puntos. ¡Tomate tu tiempo y practica!
\n\nPara empezar los ejercicios presiona el botón de comenzar.

    </string>
</resources>