<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".exercisesFragments.GeneralDiptongo">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/palabra"
        android:layout_width="250dp"
        android:layout_height="108dp"
        android:textSize="50dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="181dp"
        android:text="@string/empezar" />

    <TextView
        android:id="@+id/puntuacion"
        android:layout_width="250dp"
        android:layout_height="108dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-7dp"
        android:layout_marginTop="62dp"
        android:text="@string/puntos"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="250dp"
        android:layout_height="108dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="81dp"
        android:layout_marginTop="304dp"
        android:text="@string/timer"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/puntos"
        android:layout_width="250dp"
        android:layout_height="108dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="146dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="15dp"
        android:text="@string/cero"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/empezar"
        android:layout_width="176dp"
        android:layout_height="82dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="124dp"
        android:layout_marginBottom="223dp"
        android:text="@string/empezar"
        android:textSize="@dimen/button_submit_text_size" />

    <Button
        android:id="@+id/submit"
        android:layout_width="176dp"
        android:layout_height="82dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="124dp"
        android:layout_marginBottom="223dp"
        android:text="@string/button_submit"
        android:visibility="invisible"
        android:textSize="@dimen/button_submit_text_size" />

    <Button
        android:id="@+id/diptongo"
        android:layout_width="176dp"
        android:layout_height="82dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="222dp"
        android:text="@string/diptongo"
        android:visibility="invisible"
        android:textSize="@dimen/button_submit_text_size" />

    <Button
        android:id="@+id/hiato"
        android:layout_width="176dp"
        android:layout_height="82dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="221dp"
        android:layout_marginBottom="224dp"
        android:text="@string/hiato"
        android:visibility="invisible"
        android:textSize="@dimen/button_submit_text_size" />

</RelativeLayout>