<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menuFragments.menuEjercicios">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tvTituloMenuEjercios"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/practica_title_tv"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/bEjerciciosNormal"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/modo_cl_sico_btn" />

        <Button
            android:id="@+id/bContraTiempo"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/modo_contratiempo_btn" />
    </LinearLayout>

</FrameLayout>