<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".exercisesFragments.EjercicioIntegradorTildePosFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin">

        <TextView
            android:id="@+id/textViewPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/integrador_prompt"
            android:textSize="@dimen/prompt_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.162" />

        <TextView
            android:id="@+id/textViewLlevaTilde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="408dp"
            android:text="@string/diptongo_hiato_tiene_un"
            android:textSize="@dimen/clause_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPalabra"
            app:layout_constraintVertical_bias="0.477" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_submit"
            android:textSize="@dimen/button_submit_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.871"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerSilabaQueLoLleva"
            app:layout_constraintVertical_bias="0.518" />

        <TextView
            android:id="@+id/textViewPalabra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_text"
            android:textSize="@dimen/main_word_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPrompt"
            app:layout_constraintVertical_bias="0.065" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLlevaTilde"
            app:layout_constraintVertical_bias="0.0">

            <RadioButton
                android:id="@+id/radioButtonSi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diptongo_hiato_diptongo" />

            <RadioButton
                android:id="@+id/radioButtonNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diptongo_hiato_hiato" />
        </RadioGroup>

        <Spinner
            android:id="@+id/spinnerSilabaQueLoLleva"
            android:layout_width="229dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSilabaQueLoLleva"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewSilabaQueLoLleva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diptongo_hiato_formado_por"
            android:textSize="@dimen/clause_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintVertical_bias="0.024" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>