<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".exercisesFragments.EjercicioGeneralDefiniciones1Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin">

        <TextView
            android:id="@+id/textViewPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_definiciones_1_pregunta"
            android:textSize="@dimen/prompt_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="@fraction/question_horizontal_bias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="@fraction/question_vertical_bias" />

        <RadioGroup
            android:id="@+id/radioGroupAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="@fraction/answer_group_horizontal_bias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPrompt"
            app:layout_constraintVertical_bias="@fraction/answer_group_vertical_bias">

            <RadioButton
                android:id="@+id/radioButtonAgudas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_definiciones_1_agudas"
                android:textSize="@dimen/answer_text_size" />

            <RadioButton
                android:id="@+id/radioButtonGraves"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_definiciones_1_graves"
                android:textSize="@dimen/answer_text_size" />

            <RadioButton
                android:id="@+id/radioButtonEsdSobre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_definiciones_1_esdrújulas_sobreesdrujulas"
                android:textSize="@dimen/answer_text_size" />

        </RadioGroup>

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_submit"
            android:textSize="@dimen/button_submit_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="@fraction/button_submit_horizontal_bias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupAnswer"
            app:layout_constraintVertical_bias="@fraction/button_submit_vertical_bias" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>