<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lessonsFragments.ReglaGeneralFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/lecciones_btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_gravity="center"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvLecDescTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_dummy"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:layout_weight="3"
            android:fillViewport="true">

            <TextView
                android:id="@+id/txtDescrip"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:lines="10"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                android:text="@string/dummy_text"
                android:textSize="15sp" />

        </ScrollView>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="271dp"
            android:src="@drawable/reglageneral" />


    </LinearLayout>

</FrameLayout>